# apis-override-select2js

./: CHANGELOG.md  pyproject.toml
.github/workflows/: publish.yml  release-please.yml
contrib/: select2_js.patch  select2_min_js.patch
