[tool.poetry]
name = "apis-override-select2js"
version = "0.1"
description = "Override select2js files in APIS Django projects"
authors = ["Birger Schacht <birger.schacht@oeaw.ac.at>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
django = "^4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
